# Copyright 2019 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style license that can be found
# in the LICENSE file of the main Hafnium repository or at
# https://opensource.org/licenses/BSD-3-Clause.

import("//build/linux/linux.gni")

linux_kernel("linux") {
  prebuilt = "//prebuilts/linux-aarch64/linux/vmlinuz"
}
